# bp2vpn_vision

./: .gitignore  BUILD_GUIDE.md  README.md  XML_FORMAT_REQUIREMENTS.md  XML_RULE.md  bp2vpn_gui_ultra.py  bp_export_cli.py  bp_export_system.py  build_executable.bat  claude.md  create_installer.bat  patient_list_example.txt  pyproject.toml  requirements.txt  run_export.bat  setup_venv.bat  setup_venv.sh  version_info.txt  操作說明.md
data/: .gitkeep
data/rule/: totfa.rar
